--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "dev": "nodemon app.js"
   },
   "dependencies": {
+    "@google/genai": "^1.34.0",
     "cors": "^2.8.5",
     "express": "^5.2.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.16.0",
     "nodemon": "^3.1.11",
-    "save": "^2.9.0"
+    "save": "^2.9.0",
+    "util": "^0.12.5"
   }
 }
